--- a/.env.example
+++ b/.env.example
@@ -12,7 +12,7 @@ S3_BUCKET=axrail-bot-content
 CONTENT_MANIFEST_KEY=current.json
 
 # Bedrock model, used when APP_MODE=aws
-BEDROCK_MODEL_ID=amazon.nova-lite-v1:0
+BEDROCK_MODEL_ID=anthropic.claude-3-haiku-20240307-v1:0
 
 # Crawler mode "local", "s3", "both"
 INGESTION_MODE=local
